docs: reposition for official driver 5.7 Scala 3 support
The official mongo-scala-driver gained native Scala 3 codecs in 5.7, so the framing now leads with the type-safe DSL, configurable discriminators and enum codecs the official macro still lacks. Adds a type-safety-first README hero and updates install snippets to the native 5.7 driver.